--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.19.2",
+    "react-query-devtools": "^2.6.3",
     "react-quill": "^1.3.5",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
